# fann-cpp-vector

./: .gitignore  CMakeLists.txt  README.md  agent.policy
include/: wrapper.h
src/: wrapper.cpp
test/: wrapper_test.cpp
